  3. (Christof Meerwald)

Fixed:

- issue2550811: work around Unicode encoding issues in jinja2 template
  by explicitly converting data to Unicode; also fixed pagination and
  selecting columns to display in the issues list (Christof Meerwald)
- issue2550988: fixed fallback to pseudo random number generator in
  case SystemRandom isn't available, prefer use of secrets module if
  available (Python 3.6+)


2018-07-13 1.6.0

Features:

- issue2550894: migrate test suite and run_test.py to py.test (John Kristensen)
- issue2550880: Ability to choose password store scheme and SSHA
  support. Discussion on devel list is tending in favor of this patch.
  Embedded test works, my manual test with a SSHA password
  assigned to a user allowed the user to log in.   Ran the test suite
  and the tests that were not skipped passed. (applied by John Rouillard)
- New Link/Multilink property attribute 'msg_header_property', can be
  used to configure additional headers in outgoing emails. See
  documentation in ``doc/customizing.txt``. (Ralf Schlatterbeck)
- Allow multiple file uploads: If the html template specifies
  multiple="multiple" for a file upload the user can attach multiple
  files and the form parser now handles this. (Ralf Schlatterbeck)
- issue2550886: Add support for an integer type to join the existing
  number type. This can be used for properties used for ordering,
  counts etc. where a decimal point isn't needed. Developed by
  Anthony (antmail). Doc updates written by John Rouillard. (applied
  by John Rouillard)
- Updated html/_generic.404.html to use the page template. So 404
  errors now include the left hand menu, a proper page title and
  body content. Note added to doc/upgrading.txt on how to add it to
  deployed trackers. (John Rouillard)
- issue2109308 - Allow subject of nosy messages be changed from reactor
  Adds a subject parameter to nosymessage function. Patch initally
  generated by Frank Niessink. Tests, adaptation by John Rouillard.